# combine_csv

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  requirements.txt
src/combine_csv/: merge.py  pivot.py  sas.py  split.py
